--- a/BaseAnimation/res/values/strings.xml
+++ b/BaseAnimation/res/values/strings.xml
@@ -247,5 +247,5 @@
     <string name="loading">Loading</string>
     
     <string name="test">测试git</string>
-
+	<string name="test">测试git</string>
 </resources>
