--- a/BaseAnimation/res/values/strings.xml
+++ b/BaseAnimation/res/values/strings.xml
@@ -246,6 +246,6 @@
     
     <string name="loading">Loading</string>
     
-    <string name="test">测试git</string>
-	<string name="test">测试git</string>
+    <string name="test">测试git1</string>
+	<string name="test">测试git2</string>
 </resources>
